fixed layout issues in login component

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -446,7 +446,6 @@ body > #root{
 
 
         .form-center {
-            width: 500px;
             border-radius: 15px;
             background-color: white;
             position: absolute;
